new pipeline working

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
@@ -50,6 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "GRID_SIZE = 1024\n",
+    "PIXELS_PER_MM = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tf.keras.backend.clear_session()\n",
     "\n",
     "parameter_size = 2\n",
@@ -230,19 +240,54 @@
     "    def field_with_bb(x, y):\n",
     "        return field(x, y) * bb_attenuation_map(x - bb_centre[0], y - bb_centre[1])\n",
     "\n",
-    "    with_bb = field_with_bb(xx, yy)\n",
-    "        \n",
-    "            \n",
+    "    img = field_with_bb(xx, yy)    \n",
     "    parameters = tf.concat([field_centre, field_side_lengths, [field_rotation], bb_centre, [bb_diameter]], 0)\n",
-    "    img = tf.convert_to_tensor(with_bb, dtype=tf.float32)\n",
+    "    \n",
+    "    xx = tf.convert_to_tensor(xx, dtype=tf.float32)\n",
+    "    yy = tf.convert_to_tensor(yy, dtype=tf.float32)\n",
+    "    img = tf.convert_to_tensor(img, dtype=tf.float32)\n",
+    "    \n",
+    "    model_input = tf.stack([xx, yy, img], axis=-1)\n",
+    "    \n",
+    "    xx_out = bb_centre[0] - xx\n",
+    "    yy_out = bb_centre[1] - yy\n",
+    "    \n",
+    "    model_output = tf.stack([xx_out, yy_out], axis=-1)\n",
     "            \n",
-    "    return parameters, img, xx, yy\n",
+    "    return model_input, model_output, parameters\n",
     "\n",
-    "parameters, img, xx, yy = create_single_dataset(1024, 4)\n",
-    "\n",
+    "model_input, model_output, parameters = create_single_dataset(GRID_SIZE, PIXELS_PER_MM)\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
-    "plt.pcolormesh(xx, yy, img)\n",
+    "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2])\n",
+    "plt.axis('equal')\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2], 100)\n",
+    "plt.contour(model_input[:,:,0], model_input[:,:,1], model_output[:,:,0], levels=[0])\n",
+    "plt.contour(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1], levels=[0])\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_output[:,:,0])\n",
+    "plt.colorbar()\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1])\n",
+    "plt.colorbar()\n",
     "plt.axis('equal')"
    ]
   },
@@ -261,21 +306,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_pipeline_dataset(batch_size, min_size=32, max_size=128):\n",
-    "    \n",
-    "    min_size = tf.convert_to_tensor(min_size, dtype=tf.int32)\n",
-    "    max_size = tf.convert_to_tensor(max_size, dtype=tf.int32)\n",
-    "    \n",
+    "def create_pipeline_dataset(batch_size, grid_size=GRID_SIZE, pixels_per_mm=PIXELS_PER_MM):\n",
     "    def dataset_generator():\n",
-    "        image_size_for_current_batch = tf.random.uniform((), min_size, max_size, dtype=tf.int32).numpy()\n",
-    "        \n",
-    "        for _ in range(batch_size):\n",
-    "            yield create_single_dataset(image_size_for_current_batch)\n",
+    "        yield create_single_dataset(grid_size, pixels_per_mm)\n",
     "\n",
     "    dataset = tf.data.Dataset.from_generator(\n",
     "        dataset_generator, \n",
-    "        (tf.float32, tf.float32), \n",
-    "        (tf.TensorShape([8]), tf.TensorShape([None, None]))\n",
+    "        (tf.float32, tf.float32, tf.float32), \n",
+    "        (tf.TensorShape([grid_size, grid_size, 3]), tf.TensorShape([grid_size, grid_size, 2]), tf.TensorShape([8]))\n",
     "    )\n",
     "\n",
     "    dataset = dataset.repeat().batch(batch_size)\n",
@@ -289,12 +327,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameters, img in create_pipeline_dataset(2).take(3):    \n",
-    "    dim = img.shape\n",
+    "for model_input, model_output, parameters in create_pipeline_dataset(2).take(3):    \n",
+    "    dim = model_input.shape\n",
     "    print(dim)\n",
     "    for i in range(dim[0]):        \n",
     "        plt.figure()\n",
-    "        plt.pcolormesh(img[i, :, :])\n",
+    "        plt.pcolormesh(model_input[i, :, :, 0], model_input[i, :, :, 1], model_input[i, :, :, 2])\n",
     "        plt.axis('equal')\n",
     "    plt.show()"
    ]
