created deepmind like unet

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
@@ -41,15 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reversed?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "GRID_SIZE = 1024\n",
     "PIXELS_PER_MM = 4"
    ]
@@ -60,7 +51,189 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tf.keras.backend.clear_session()\n",
+    "\n",
+    "initializer = tf.random_normal_initializer(0., 0.02)\n",
+    "\n",
+    "\n",
+    "def down_block(x, depth, num_convs, channels, pool):\n",
+    "    convolution_sequence = tf.keras.Sequential(name=f'down-convolution-d{depth}')\n",
+    "    convolution_sequence.add(\n",
+    "        tf.keras.layers.ReLU()\n",
+    "    )\n",
+    "    for i in range(num_convs):\n",
+    "        convolution_sequence.add(\n",
+    "            tf.keras.layers.Conv2D(\n",
+    "                channels, (3, 3), strides=1, padding='same',\n",
+    "                kernel_initializer=initializer, use_bias=False)\n",
+    "        )\n",
+    "        if i != num_convs - 1:\n",
+    "            convolution_sequence.add(\n",
+    "                tf.keras.layers.ReLU()\n",
+    "            )\n",
+    "    \n",
+    "    \n",
+    "    short_circuit_sequence = tf.keras.Sequential(name=f'down-short-circuit-d{depth}')\n",
+    "    short_circuit_sequence.add(\n",
+    "        tf.keras.layers.Conv2D(\n",
+    "            channels, (1, 1), strides=1, padding='same',\n",
+    "            kernel_initializer=tf.ones_initializer(), \n",
+    "            use_bias=False, trainable=False)\n",
+    "    )\n",
+    "    \n",
+    "    x = tf.keras.layers.Add()(\n",
+    "        [convolution_sequence(x), short_circuit_sequence(x)]\n",
+    "    )\n",
+    "    \n",
+    "    unet_short_circuit = x\n",
+    "    \n",
+    "    if pool != 0:\n",
+    "        x = tf.keras.layers.AveragePooling2D((pool, pool), strides=None, padding='valid')(x)\n",
+    "        \n",
+    "    return x, unet_short_circuit\n",
+    "    \n",
+    "    \n",
+    "def fully_connected_block(x, input_size, internal_channels, output_channels):\n",
+    "    x = tf.keras.layers.Conv2D(\n",
+    "            internal_channels, \n",
+    "            (input_size, input_size),\n",
+    "            strides=1,\n",
+    "            padding='valid',\n",
+    "            kernel_initializer=initializer,\n",
+    "            use_bias=False\n",
+    "    )(x)\n",
+    "    \n",
+    "    repeats = 2\n",
+    "    for _ in range(repeats):\n",
+    "        short_circuit = x\n",
+    "        x = tf.keras.layers.ReLU()(x)\n",
+    "        x = tf.keras.layers.Dense(internal_channels)(x)\n",
+    "        x = tf.keras.layers.Add()([x, short_circuit])\n",
+    "        \n",
+    "    x = tf.keras.layers.ReLU()(x)\n",
+    "    x = tf.keras.layers.Dense(input_size * input_size * output_channels)(x)\n",
+    "    \n",
+    "    x = tf.keras.layers.Reshape((input_size, input_size, output_channels))(x)\n",
+    "    \n",
+    "    return x\n",
+    "    \n",
+    "\n",
+    "def up_block(x, unet_short_circuit, depth, num_convs, channels, up_scale):\n",
+    "    if up_scale != 0:\n",
+    "        x = tf.keras.layers.UpSampling2D(size=(up_scale, up_scale))(x)\n",
+    "        \n",
+    "    x = tf.keras.layers.Add()([x, unet_short_circuit])\n",
+    "    \n",
+    "    convolution_sequence = tf.keras.Sequential(name=f'up-convolution-d{depth}')\n",
+    "    convolution_sequence.add(\n",
+    "        tf.keras.layers.ReLU()\n",
+    "    )\n",
+    "    for i in range(num_convs):\n",
+    "        convolution_sequence.add(\n",
+    "            tf.keras.layers.Conv2D(\n",
+    "                channels, (3, 3), strides=1, padding='same',\n",
+    "                kernel_initializer=initializer, use_bias=False)\n",
+    "        )\n",
+    "        if i != num_convs - 1:\n",
+    "            convolution_sequence.add(\n",
+    "                tf.keras.layers.ReLU()\n",
+    "            )\n",
+    "    \n",
+    "    \n",
+    "    internal_short_circuit = tf.keras.Sequential(name=f'up-short-circuit-d{depth}')\n",
+    "    internal_short_circuit.add(\n",
+    "        tf.keras.layers.Conv2D(\n",
+    "            channels, (1, 1), strides=1, padding='same',\n",
+    "            kernel_initializer=tf.ones_initializer(), \n",
+    "            use_bias=False, trainable=False)\n",
+    "    )\n",
+    "    \n",
+    "    x = tf.keras.layers.Add()(\n",
+    "        [convolution_sequence(x), internal_short_circuit(x)]\n",
+    "    )\n",
+    "    \n",
+    "    return x\n",
+    "    \n",
+    "    \n",
+    "def Model(grid_size=GRID_SIZE):\n",
+    "    down_block_params = [\n",
+    "        (0, (3, 12, 2)),  # BS, 1024, 1024,  3 --> BS, 512, 512, 12\n",
+    "        (1, (3, 12, 4)),  # BS,  512,  512, 12 --> BS, 128, 128, 12\n",
+    "        (2, (3, 12, 4)),  # BS,  128,  128, 12 --> BS,  32,  32, 12\n",
+    "        (3, (3, 12, 4)),  # BS,   32,   32, 12 --> BS,   8,   8, 12\n",
+    "        (4, (4, 24, 0)),  # BS,    8,    8, 12 --> BS,   8,   8, 24\n",
+    "    ]\n",
+    "    fully_connected_params = (8, 96, 24)\n",
+    "    up_block_params = [\n",
+    "        (4, (4, 12, 0)),  \n",
+    "        (3, (4, 12, 4)),  \n",
+    "        (2, (3, 12, 4)), \n",
+    "        (1, (3, 12, 4)), \n",
+    "        (0, (3,  2, 2)), \n",
+    "    ]\n",
+    "    \n",
+    "    inputs = tf.keras.layers.Input(shape=[grid_size,grid_size,3], batch_size=None)\n",
+    "    x = inputs\n",
+    "\n",
+    "    unet_short_circuits = []\n",
+    "    for depth, down_block_param in down_block_params:\n",
+    "        x, unet_short_circuit = down_block(x, depth, *down_block_param)\n",
+    "        unet_short_circuits.append(unet_short_circuit)\n",
+    "        \n",
+    "    x = fully_connected_block(x, *fully_connected_params)\n",
+    "    \n",
+    "    unet_short_circuits = reversed(unet_short_circuits)\n",
+    "    \n",
+    "    for unet_shot_circuit, (depth, up_block_param) in zip(unet_short_circuits, up_block_params):\n",
+    "        x = up_block(x, unet_shot_circuit, depth, *up_block_param)\n",
+    "    \n",
+    "        \n",
+    "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
+    "\n",
+    "\n",
+    "model = Model()\n",
+    "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "parameter_size = 2\n",
     "\n",
@@ -352,22 +525,7 @@
     "        'bb_diameter': parameters[7]\n",
     "    }\n",
     "    \n",
-    "    return parameters\n",
-    "\n",
-    "\n",
-    "def extract_parameters_from_both(predicted_parameters, image_parameters):\n",
-    "    \n",
-    "    output_image_parameters = extract_parameters(image_parameters)\n",
-    "    \n",
-    "    output_predicted_parameters = {\n",
-    "        'field_centre': (image_parameters[0], image_parameters[1]),\n",
-    "        'field_side_lengths': (image_parameters[2], image_parameters[3]),\n",
-    "        'field_rotation': image_parameters[4] * 180,\n",
-    "        'bb_centre': (predicted_parameters[0], predicted_parameters[1]),\n",
-    "        'bb_diameter': image_parameters[7]\n",
-    "    }\n",
-    "    \n",
-    "    return output_predicted_parameters, output_image_parameters"
+    "    return parameters"
    ]
   },
   {
