new model plotting working
Former-commit-id: 31c951ac623c234dac944453e42d0242bc7ff68a

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
@@ -218,150 +218,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "parameter_size = 2\n",
-    "\n",
-    "\n",
-    "def convolve_block(filters, kernel, apply_batchnorm=True):\n",
-    "    initializer = tf.random_normal_initializer(0., 0.02)\n",
-    "\n",
-    "    result = tf.keras.Sequential()\n",
-    "    result.add(\n",
-    "        tf.keras.layers.Conv2D(\n",
-    "            filters, kernel, strides=1, padding='same',\n",
-    "            kernel_initializer=initializer, use_bias=False))\n",
-    "\n",
-    "    if apply_batchnorm:\n",
-    "        result.add(tf.keras.layers.BatchNormalization())\n",
-    "\n",
-    "    result.add(tf.keras.layers.LeakyReLU())\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "def evacuation_hatch(x):\n",
-    "    evacuation_stages = [\n",
-    "        tf.keras.layers.GlobalMaxPooling2D(),\n",
-    "        tf.keras.layers.Dense(parameter_size),\n",
-    "    ]\n",
-    "    for evac in evacuation_stages:\n",
-    "        x = evac(x)\n",
-    "        \n",
-    "    return x\n",
-    "\n",
-    "\n",
-    "def Model():\n",
-    "    down_blocks = [\n",
-    "        convolve_block(64, 3, apply_batchnorm=False),\n",
-    "        convolve_block(128, 3),\n",
-    "    ]\n",
-    "    fully_connected_blocks = [\n",
-    "        tf.keras.layers.Dense(128),\n",
-    "        tf.keras.layers.Dense(128),\n",
-    "        tf.keras.layers.Dense(128),\n",
-    "    ]\n",
-    "    up_blocks = [\n",
-    "        convolve_block(128, 3),\n",
-    "        convolve_block(64, 3),\n",
-    "    ]\n",
-    "    \n",
-    "    inputs = tf.keras.layers.Input(shape=[None,None,1], batch_size=None)\n",
-    "    x = inputs\n",
-    "    \n",
-    "    skips = []\n",
-    "#     evacs = []\n",
-    "    \n",
-    "    for down in down_blocks:\n",
-    "        x = down(x)\n",
-    "        skips.append(x)\n",
-    "#         evacs.append(evacuation_hatch(x))\n",
-    "\n",
-    "    skips = reversed(skips)\n",
-    "    \n",
-    "    for fc in fully_connected_blocks:\n",
-    "        init = x\n",
-    "        x = fc(x)\n",
-    "        x = tf.keras.layers.Add()([x, init])   \n",
-    "#         evacs.append(evacuation_hatch(x))\n",
-    "        \n",
-    "    for up, skip in zip(up_blocks, skips):\n",
-    "        x = up(x)\n",
-    "        x = tf.keras.layers.Add()([x, skip])\n",
-    "#         evacs.append(evacuation_hatch(x))\n",
-    "    \n",
-    "    x = evacuation_hatch(x)\n",
-    "#     x = tf.keras.layers.Concatenate()(evacs)\n",
-    "    x = tf.keras.layers.Dense(parameter_size)(x)\n",
-    "\n",
-    "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
-    "\n",
-    "\n",
-    "model = Model()\n",
-    "\n",
-    "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.trainable_variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from pymedphys._mocks import wlutz, profiles\n",
     "from pymedphys._wlutz import reporting, interppoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = interppoints.translate_and_rotate_transform([1,1], 20)\n",
-    "interppoints.apply_transform(2, 3, transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.uniform"
    ]
   },
   {
@@ -459,9 +318,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.average(model_input[:,:,0] + model_output[:,:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1])\n",
     "plt.colorbar()\n",
     "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.average(model_input[:,:,1] + model_output[:,:,1])"
    ]
   },
   {
@@ -500,14 +377,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for model_input, model_output, parameters in create_pipeline_dataset(2).take(3):    \n",
+    "def plot_raw_images(model_input):\n",
     "    dim = model_input.shape\n",
     "    print(dim)\n",
     "    for i in range(dim[0]):        \n",
     "        plt.figure()\n",
     "        plt.pcolormesh(model_input[i, :, :, 0], model_input[i, :, :, 1], model_input[i, :, :, 2])\n",
     "        plt.axis('equal')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "for model_input, model_output, parameters in create_pipeline_dataset(1).take(2):    \n",
+    "    plot_raw_images(model_input)"
    ]
   },
   {
@@ -520,7 +401,7 @@
     "    parameters = {\n",
     "        'field_centre': (parameters[0], parameters[1]),\n",
     "        'field_side_lengths': (parameters[2], parameters[3]),\n",
-    "        'field_rotation': parameters[4] * 180,\n",
+    "        'field_rotation': parameters[4],\n",
     "        'bb_centre': (parameters[5], parameters[6]),\n",
     "        'bb_diameter': parameters[7]\n",
     "    }\n",
@@ -536,13 +417,11 @@
    "source": [
     "def create_figure(image, field_centre, field_side_lengths, field_rotation, bb_centre, bb_diameter):\n",
     "    dim = image.shape\n",
-    "    x = np.linspace(-1, 1, dim[0])\n",
-    "    y = x\n",
     "    \n",
     "    return reporting.image_analysis_figure(\n",
-    "        x, y, np.array(image),\n",
+    "        np.array(image[0,:,0]), np.array(image[:,0,1]), np.array(image[:,:,2]),\n",
     "        np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
-    "        bb_diameter, field_side_lengths, penumbra=0.2, units=''\n",
+    "        bb_diameter, field_side_lengths, penumbra=2, units=''\n",
     "    )"
    ]
   },
@@ -552,26 +431,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def results_figures(model, batch_images, batch_ground_truth_parameters):\n",
-    "    batch_dim = batch_images.shape\n",
+    "def results_figures(model, batch_model_inputs, batch_model_outputs, batch_parameters):\n",
+    "    batch_dim = batch_model_inputs.shape\n",
     "    num_batches = batch_dim[0]\n",
-    "    image_shape = dim[1]\n",
-    "    x = np.linspace(-1, 1, image_shape)\n",
-    "    y = x\n",
     "    \n",
-    "    batch_predicted_parameters = model(batch_images, training=True)\n",
+    "    predicted = model(batch_model_inputs, training=True)\n",
     "    \n",
     "    for i in range(num_batches):\n",
+    "        parameters = extract_parameters(batch_parameters[i, :])\n",
     "        \n",
-    "        predicted_parameters, ground_truth_parameters = extract_parameters_from_both(\n",
-    "            batch_predicted_parameters[i, :],\n",
-    "            batch_ground_truth_parameters[i, :]\n",
+    "        ground_truth_bb_centre = (\n",
+    "            np.average(model_input[i,:,:,0] + batch_model_outputs[i,:,:,0]),\n",
+    "            np.average(model_input[i,:,:,1] + batch_model_outputs[i,:,:,1]),            \n",
     "        )\n",
+    "        \n",
+    "        ground_truth_parameters = {\n",
+    "            **parameters,\n",
+    "            'bb_centre': ground_truth_bb_centre\n",
+    "        }\n",
+    "        \n",
+    "        predicted_bb_centre = (\n",
+    "            np.average(model_input[i,:,:,0] + predicted[i,:,:,0]),\n",
+    "            np.average(model_input[i,:,:,1] + predicted[i,:,:,1]),            \n",
+    "        )\n",
+    "        \n",
+    "        predicted_parameters = {\n",
+    "            **parameters,\n",
+    "            'bb_centre': predicted_bb_centre\n",
+    "        }\n",
     "    \n",
-    "        fig, axs = create_figure(batch_images[i,:,:], **ground_truth_parameters)\n",
+    "        fig, axs = create_figure(batch_model_inputs[i,:,:,:], **ground_truth_parameters)\n",
     "        axs[0,0].set_title(\"Ground Truth\")\n",
     "\n",
-    "        fig, axs = create_figure(batch_images[i,:,:], **predicted_parameters)\n",
+    "        fig, axs = create_figure(batch_model_inputs[i,:,:,:], **predicted_parameters)\n",
     "        axs[0,0].set_title(\"Predicted\")\n",
     "\n",
     "        plt.show()"
@@ -583,17 +475,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameters, img in create_pipeline_dataset(1).take(1):    \n",
-    "    dim = img.shape\n",
-    "    print(dim)\n",
-    "    for i in range(dim[0]):        \n",
-    "        plt.figure()\n",
-    "        plt.pcolormesh(img[i, :, :])\n",
-    "        plt.axis('equal')\n",
-    "    plt.show()\n",
-    "    \n",
-    "    \n",
-    "    results_figures(model, img, parameters)"
+    "for model_input, model_output, parameters in create_pipeline_dataset(1).take(1):    \n",
+    "    plot_raw_images(model_input)\n",
+    "    results_figures(model, model_input, model_output, parameters)"
    ]
   },
   {
