pixel distance method running, unsure if it will converge...

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/001-just-learn-bb.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/001-just-learn-bb.ipynb
@@ -719,7 +719,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "EPOCHS = 150\n",
