--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/002-pixel-distance-method.ipynb
@@ -201,6 +201,12 @@
     "\n",
     "\n",
     "model = Model()\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss=tf.keras.losses.MeanAbsoluteError(),\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
     "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
    ]
   },
@@ -229,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_single_dataset(grid_size, pixels_per_mm):\n",
+    "def create_single_dataset(grid_size, pixels_per_mm, include_params=True):\n",
     "    bounding_pixel_centre_val_mm = (grid_size / 2 - 0.5) / pixels_per_mm   \n",
     "\n",
     "    field_centre = np.random.uniform(-50, 50, size=2)\n",
@@ -285,8 +291,12 @@
     "    yy_out = bb_centre[1] - yy\n",
     "    \n",
     "    model_output = tf.stack([xx_out, yy_out], axis=-1)\n",
-    "            \n",
-    "    return model_input, model_output, parameters\n",
+    "    \n",
+    "    if include_params:\n",
+    "        return model_input, model_output, parameters\n",
+    "    \n",
+    "    return model_input, model_output\n",
+    "\n",
     "\n",
     "model_input, model_output, parameters = create_single_dataset(GRID_SIZE, PIXELS_PER_MM)\n",
     "\n",
@@ -347,7 +357,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img.shape[0]"
+    "def create_pipeline_dataset(batch_size, grid_size=GRID_SIZE, pixels_per_mm=PIXELS_PER_MM, include_params=True):\n",
+    "    def dataset_generator():\n",
+    "        yield create_single_dataset(grid_size, pixels_per_mm, include_params=include_params)\n",
+    "        \n",
+    "    if include_params:\n",
+    "        generator_params = (\n",
+    "            (tf.float32, tf.float32, tf.float32), \n",
+    "            (tf.TensorShape([grid_size, grid_size, 3]), tf.TensorShape([grid_size, grid_size, 2]), tf.TensorShape([8]))\n",
+    "        )\n",
+    "    else:\n",
+    "        generator_params = (\n",
+    "            (tf.float32, tf.float32), \n",
+    "            (tf.TensorShape([grid_size, grid_size, 3]), tf.TensorShape([grid_size, grid_size, 2]))\n",
+    "        )\n",
+    "\n",
+    "    dataset = tf.data.Dataset.from_generator(\n",
+    "        dataset_generator, *generator_params\n",
+    "    )\n",
+    "\n",
+    "    dataset = dataset.repeat().batch(batch_size)\n",
+    "    \n",
+    "    return dataset"
    ]
   },
   {
@@ -355,21 +386,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def create_pipeline_dataset(batch_size, grid_size=GRID_SIZE, pixels_per_mm=PIXELS_PER_MM):\n",
-    "    def dataset_generator():\n",
-    "        yield create_single_dataset(grid_size, pixels_per_mm)\n",
-    "\n",
-    "    dataset = tf.data.Dataset.from_generator(\n",
-    "        dataset_generator, \n",
-    "        (tf.float32, tf.float32, tf.float32), \n",
-    "        (tf.TensorShape([grid_size, grid_size, 3]), tf.TensorShape([grid_size, grid_size, 2]), tf.TensorShape([8]))\n",
-    "    )\n",
-    "\n",
-    "    dataset = dataset.repeat().batch(batch_size)\n",
-    "    \n",
-    "    return dataset"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -387,7 +404,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "for model_input, model_output, parameters in create_pipeline_dataset(1).take(2):    \n",
+    "for model_input, model_output, parameters in create_pipeline_dataset(1).take(2):\n",
     "    plot_raw_images(model_input)"
    ]
   },
@@ -475,289 +492,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for model_input, model_output, parameters in create_pipeline_dataset(1).take(1):    \n",
-    "    plot_raw_images(model_input)\n",
-    "    results_figures(model, model_input, model_output, parameters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def flip_parameters(parameters):\n",
-    "    new_parameters = tf.concat([\n",
-    "        parameters[:, 0:2],\n",
-    "        parameters[:, 3:4],\n",
-    "        parameters[:, 2:3],\n",
-    "        parameters[:, 4:5] + 0.5,\n",
-    "        parameters[:, 5::]\n",
-    "    ], axis=-1)\n",
-    "    \n",
-    "    return new_parameters\n",
-    "\n",
-    "\n",
-    "for parameters, img in create_pipeline_dataset(1).take(1):\n",
-    "    flipped_parameters = flip_parameters(parameters)\n",
-    "    \n",
-    "    print(parameters)\n",
-    "    print(flipped_parameters)\n",
-    "    \n",
-    "    batch_dim = img.shape\n",
-    "    num_batches = batch_dim[0]\n",
-    "    \n",
-    "    for i in range(num_batches):\n",
-    "        fig, axs = create_figure(img[i,:,:], **extract_parameters(parameters[i,:]))\n",
-    "        axs[0,0].set_title(\"Original\")\n",
-    "\n",
-    "        fig, axs = create_figure(img[i,:,:], **extract_parameters(flipped_parameters[i,:]))\n",
-    "        axs[0,0].set_title(\"Flipped\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def determine_rotation_diff(predicted_parameters, ground_truth_parameters):\n",
-    "    predicted_rotations = predicted_parameters[:, 4] * 180\n",
-    "    ground_truth_rotations = ground_truth_parameters[:, 4] * 180\n",
-    "    \n",
-    "    diff_rotation = (predicted_rotations - ground_truth_rotations) % 180\n",
-    "    diff_rotation = tf.reduce_min(tf.stack([diff_rotation, 180 - diff_rotation]), axis=0)\n",
-    "    \n",
-    "    return diff_rotation\n",
-    "\n",
-    "\n",
-    "def adjust_rotation(parameters, degrees):\n",
-    "    new_parameters = tf.concat([\n",
-    "        parameters[:,0:4],\n",
-    "        parameters[:,4:5] + degrees/180,\n",
-    "        parameters[:,5::]\n",
-    "    ], axis=-1)\n",
-    "    \n",
-    "    return new_parameters\n",
-    "\n",
-    "\n",
-    "for parameters, img in create_pipeline_dataset(4).take(1):    \n",
-    "    print(determine_rotation_diff(parameters, parameters))\n",
-    "    print(determine_rotation_diff(parameters, adjust_rotation(parameters, 1)))\n",
-    "    print(determine_rotation_diff(parameters, adjust_rotation(parameters, 90)))\n",
-    "    print(determine_rotation_diff(parameters, adjust_rotation(parameters, 180)))\n",
-    "    print(determine_rotation_diff(parameters, adjust_rotation(parameters, 181)))\n",
-    "    print(determine_rotation_diff(parameters, adjust_rotation(parameters, 179)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def determine_diff_with_rotation(predicted_parameters, ground_truth_parameters):\n",
-    "    diff = tf.concat([\n",
-    "        predicted_parameters[:, 0:4] - ground_truth_parameters[:, 0:4],\n",
-    "        determine_rotation_diff(predicted_parameters, ground_truth_parameters)[:, None] / 180,\n",
-    "        predicted_parameters[:, 5::] - ground_truth_parameters[:, 5::],\n",
-    "    ], axis=-1)\n",
-    "    \n",
-    "    return diff\n",
-    "\n",
-    "\n",
-    "for parameters, img in create_pipeline_dataset(4).take(1):\n",
-    "    \n",
-    "    flipped_parameters = flip_parameters(parameters)\n",
-    "    print(determine_diff_with_rotation(parameters, parameters))\n",
-    "    print(determine_diff_with_rotation(parameters, flipped_parameters))\n",
-    "    \n",
-    "    print()\n",
-    "    \n",
-    "    print(determine_diff_with_rotation(parameters, parameters + 1))\n",
-    "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 1)))\n",
-    "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 90)))\n",
-    "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 180)))\n",
-    "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 181)))\n",
-    "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 179)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def determine_corrected_diff(predicted_parameters, ground_truth_parameters):\n",
-    "    flipped_predicted_parameters = flip_parameters(predicted_parameters)\n",
-    "    \n",
-    "    non_flipped_diff = determine_diff_with_rotation(predicted_parameters, ground_truth_parameters)\n",
-    "    flipped_diff = determine_diff_with_rotation(flipped_predicted_parameters, ground_truth_parameters)\n",
-    "    \n",
-    "    non_flipped_sum_sqrd = tf.reduce_sum(\n",
-    "        non_flipped_diff**2, axis=-1\n",
-    "    )\n",
-    "    flipped_sum_sqrd = tf.reduce_sum(\n",
-    "        flipped_diff**2, axis=-1\n",
-    "    )\n",
-    "    \n",
-    "    minimisation_stack = tf.stack([\n",
-    "        non_flipped_sum_sqrd, flipped_sum_sqrd\n",
-    "    ])\n",
-    "#     print(minimisation_stack)\n",
-    "    \n",
-    "    min_index = tf.argmin(minimisation_stack, axis=0)\n",
-    "    a_range = tf.range(min_index.shape[0], dtype=tf.int64)\n",
-    "    min_index = tf.stack([\n",
-    "        min_index, a_range\n",
-    "    ], axis=-1)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "#     print(min_index)\n",
-    "    \n",
-    "#     print(non_flipped_diff)\n",
-    "#     print(flipped_diff)\n",
-    "    \n",
-    "    both_diffs = tf.stack([\n",
-    "        non_flipped_diff, flipped_diff\n",
-    "    ])\n",
-    "#     print(both_diffs)\n",
-    "#     print(min_index)\n",
-    "\n",
-    "    diff = tf.gather_nd(\n",
-    "        both_diffs, min_index\n",
-    "    )\n",
-    "    \n",
-    "    return diff\n",
-    "\n",
-    "\n",
-    "for parameters, img in create_pipeline_dataset(2).take(1):\n",
-    "    flipped_parameters = flip_parameters(parameters)\n",
-    "    print(determine_corrected_diff(parameters, parameters + 0.5))\n",
-    "#     print(determine_corrected_diff(parameters, flipped_parameters))\n",
-    "#     print(determine_corrected_diff(flipped_parameters, parameters))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@tf.function()\n",
-    "def just_bb_loss(predicted_parameters, ground_truth_parameters):\n",
-    "    return tf.sqrt(tf.reduce_sum((predicted_parameters - ground_truth_parameters[:, 6:8])**2, axis=-1))\n",
-    "    \n",
-    "\n",
-    "for parameters, img in create_pipeline_dataset(5).take(2):\n",
-    "    print(just_bb_loss(parameters[:, 6:8] + 1, parameters))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loss_function(predicted_parameters, ground_truth_parameters):\n",
-    "    diff = determine_corrected_diff(predicted_parameters, ground_truth_parameters)\n",
-    "    loss = tf.abs(diff)\n",
-    "\n",
-    "    return loss\n",
-    "\n",
-    "\n",
-    "# for parameters, img in create_pipeline_dataset(1).take(1):\n",
-    "#     print(parameters)\n",
-    "#     print(loss_function(parameters, parameters))\n",
-    "#     print(loss_function(parameters, parameters + 1))\n",
-    "    \n",
-    "    \n",
-    "for parameters, img in create_pipeline_dataset(5).take(1):\n",
-    "    print(loss_function(parameters, parameters + 0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = tf.keras.optimizers.Adam()\n",
-    "\n",
-    "checkpoint_dir = './training_checkpoints'\n",
-    "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
-    "checkpoint = tf.train.Checkpoint(optimizer=optimizer,\n",
-    "                                 model=model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BATCH_SIZE = 10\n",
-    "\n",
-    "fixed_vals = {\n",
-    "#     'field_centre': [0, 0],\n",
-    "#     'field_side_lengths': [1, 1],\n",
-    "#     'field_rotation': 0,\n",
-    "# #     'bb_centre': [0, 0],\n",
-    "#     'bb_diameter': 0.4,\n",
-    "# #     'image_size': 32,\n",
-    "}\n",
-    "\n",
-    "test_dataset = create_pipeline_dataset(1)\n",
-    "train_dataset = create_pipeline_dataset(BATCH_SIZE)\n",
-    "\n",
-    "\n",
-    "@tf.function(experimental_relax_shapes=True)\n",
-    "def train_step(ground_truth_parameters, input_image):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        predicted_parameters = model(input_image, training=True)\n",
-    "#         loss = loss_function(predicted_parameters, ground_truth_parameters)\n",
-    "        loss = just_bb_loss(predicted_parameters, ground_truth_parameters)\n",
-    "\n",
-    "    gradients = tape.gradient(loss, model.trainable_variables)\n",
-    "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
-    "    \n",
-    "    reduced_loss = tf.reduce_mean(loss, axis=0)\n",
-    "    return reduced_loss\n",
+    "def show_predictions():\n",
+    "    for model_input, model_output, parameters in create_pipeline_dataset(1).take(1):    \n",
+    "        plot_raw_images(model_input)\n",
+    "        results_figures(model, model_input, model_output, parameters)\n",
     "        \n",
-    "        \n",
-    "concrete_train_step = train_step.get_concrete_function(\n",
-    "    tf.TensorSpec(shape=[BATCH_SIZE, 8], dtype=tf.float32), \n",
-    "    tf.TensorSpec(shape=[BATCH_SIZE, None, None], dtype=tf.float32)\n",
-    ")"
+    "show_predictions()"
    ]
   },
   {
@@ -766,16 +506,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def extract_parameters(tensor_parameters):\n",
-    "#     parameters = {\n",
-    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
-    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
-    "#         'field_rotation': tensor_parameters[4] * 180,\n",
-    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
-    "#         'bb_diameter': tensor_parameters[7]\n",
-    "#     }\n",
-    "    \n",
-    "#     return parameters"
+    "# optimizer = tf.keras.optimizers.Adam()\n",
+    "\n",
+    "# checkpoint_dir = './training_checkpoints'\n",
+    "# checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
+    "# checkpoint = tf.train.Checkpoint(optimizer=optimizer,\n",
+    "#                                  model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DisplayCallback(tf.keras.callbacks.Callback):\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        IPython.display.clear_output(wait=True)\n",
+    "        show_predictions()"
    ]
   },
   {
@@ -784,30 +539,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit(train_ds, epochs, test_ds):\n",
-    "    logging_index = tf.convert_to_tensor(0, dtype=tf.int64)\n",
-    "    \n",
-    "    for epoch in range(epochs):\n",
-    "        start = time.time()\n",
-    "\n",
-    "        for parameters, img in test_ds.take(1):\n",
-    "            results_figures(model, img, parameters)\n",
-    "\n",
-    "        iters_per_epoch = 10\n",
-    "        for parameters, img in tqdm.tqdm(train_ds.take(iters_per_epoch), total=iters_per_epoch):\n",
-    "            reduced_loss = concrete_train_step(parameters, img)\n",
-    "            \n",
-    "            logging_index += 1\n",
-    "            with summary_writer.as_default():\n",
-    "                tf.summary.scalar('bb_distance', reduced_loss, step=logging_index)\n",
-    "            \n",
-    "        \n",
-    "        if (epoch + 1) % 20 == 0:\n",
-    "            checkpoint.save(file_prefix = checkpoint_prefix)\n",
-    "\n",
-    "        print ('Time taken for epoch {} is {} sec\\n'.format(epoch + 1,\n",
-    "                                                            time.time()-start))\n",
-    "    checkpoint.save(file_prefix = checkpoint_prefix)"
+    "logdir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=logdir)"
    ]
   },
   {
@@ -825,28 +558,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 150\n",
+    "BATCH_SIZE = 10\n",
+    "EPOCHS = 10000\n",
+    "STEPS_PER_EPOCH = 2\n",
+    "VALIDATION_STEPS = 1\n",
     "\n",
-    "log_dir=\"logs/\"\n",
-    "summary_writer = tf.summary.create_file_writer(\n",
-    "  log_dir + \"fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
+    "test_dataset = create_pipeline_dataset(1, include_params=False)\n",
+    "train_dataset = create_pipeline_dataset(BATCH_SIZE, include_params=False)\n",
     "\n",
-    "fit(train_dataset, EPOCHS, test_dataset)"
+    "\n",
+    "model_history = model.fit(\n",
+    "    train_dataset, epochs=EPOCHS,\n",
+    "    steps_per_epoch=STEPS_PER_EPOCH,\n",
+    "    validation_steps=VALIDATION_STEPS,\n",
+    "    validation_data=test_dataset,\n",
+    "    callbacks=[DisplayCallback(), tensorboard_callback],\n",
+    "    use_multiprocessing=True,\n",
+    "    shuffle=False,\n",
+    ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
