adjust mlc tol to 0.1
Former-commit-id: 91e1e03abb464963b3d25dae442c5f5ad21d06e2 [formerly bf7455d8e76866a50f8dca747073643c1b304545]
Former-commit-id: 48b726b8ade9a3e69287369edcd1aaa480aeb7aa

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/000-tel-reading-missing-cps.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/000-tel-reading-missing-cps.ipynb
@@ -115,6 +115,106 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "len(delivery_monaco.gantry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(delivery_dcm.gantry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(delivery_monaco.mlc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(delivery_dcm.mlc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monaco_mlc = np.array(delivery_monaco.mlc)\n",
+    "dcm_mlc = np.array(delivery_dcm.mlc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = monaco_mlc - dcm_mlc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monaco_mlc[0,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_mlc[0,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff[0,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(np.abs(diff) > 0.09)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
