worked around overtravel issue
Former-commit-id: ee697e5d3bef83a37841f412afe8ddbfb5a6cc72

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
@@ -584,7 +584,7 @@
     "\n",
     "footer_text = (\n",
     "    f\"tel.1 file path: {str(tel_path)}\\n\"\n",
-    "    f\"icom file path: {icom_path_strings}\\n\"\n",
+    "    f\"icom file path(s): {icom_path_strings}\\n\"\n",
     "    f\"results path: {str(results_dir)}\"\n",
     ")\n",
     "\n",
