create gold_standard heat maps
Former-commit-id: eb46eefa6caad19881b5168e1567fa714ee921c2

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/003-heatmap-method.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/003-heatmap-method.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "GRID_SIZE = 1024\n",
-    "PIXELS_PER_UNIT = 512"
+    "PIXELS_PER_UNIT = 4"
    ]
   },
   {
@@ -75,11 +75,8 @@
     "initializer = tf.random_normal_initializer(0., 0.02)\n",
     "\n",
     "\n",
-    "def down_block(x, depth, num_convs, channels, pool, batch_norm=True):\n",
-    "    convolution_sequence = tf.keras.Sequential(name=f'down-convolution-d{depth}')\n",
-    "    if batch_norm:\n",
-    "        convolution_sequence.add(tf.keras.layers.BatchNormalization())\n",
-    "        \n",
+    "def down_block(x, depth, num_convs, channels, pool):\n",
+    "    convolution_sequence = tf.keras.Sequential(name=f'down-convolution-d{depth}')       \n",
     "    convolution_sequence.add(\n",
     "        tf.keras.layers.ReLU()\n",
     "    )\n",
@@ -90,8 +87,6 @@
     "                kernel_initializer=initializer, use_bias=False)\n",
     "        )\n",
     "        if i != num_convs - 1:\n",
-    "            if batch_norm:\n",
-    "                convolution_sequence.add(tf.keras.layers.BatchNormalization())\n",
     "            convolution_sequence.add(\n",
     "                tf.keras.layers.ReLU()\n",
     "            )\n",
@@ -129,12 +124,10 @@
     "    repeats = 2\n",
     "    for _ in range(repeats):\n",
     "        short_circuit = x\n",
-    "        x = tf.keras.layers.BatchNormalization()(x)\n",
     "        x = tf.keras.layers.ReLU()(x)\n",
     "        x = tf.keras.layers.Dense(internal_channels)(x)\n",
     "        x = tf.keras.layers.Add()([x, short_circuit])\n",
     "    \n",
-    "    x = tf.keras.layers.BatchNormalization()(x)\n",
     "    x = tf.keras.layers.ReLU()(x)\n",
     "    x = tf.keras.layers.Dense(input_size * input_size * output_channels)(x)\n",
     "    \n",
@@ -150,7 +143,6 @@
     "    x = tf.keras.layers.Add()([x, unet_short_circuit])\n",
     "    \n",
     "    convolution_sequence = tf.keras.Sequential(name=f'up-convolution-d{depth}')\n",
-    "    convolution_sequence.add(tf.keras.layers.BatchNormalization())\n",
     "    convolution_sequence.add(\n",
     "        tf.keras.layers.ReLU()\n",
     "    )\n",
@@ -161,7 +153,6 @@
     "                kernel_initializer=initializer, use_bias=False)\n",
     "        )\n",
     "        if i != num_convs - 1:\n",
-    "            convolution_sequence.add(tf.keras.layers.BatchNormalization())\n",
     "            convolution_sequence.add(\n",
     "                tf.keras.layers.ReLU()\n",
     "            )\n",
@@ -220,7 +211,7 @@
     "\n",
     "model = Model()\n",
     "model.compile(\n",
-    "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.0000000001),\n",
+    "    optimizer=tf.keras.optimizers.Adam(),\n",
     "    loss=tf.keras.losses.MeanAbsoluteError(),\n",
     "    metrics=['accuracy']\n",
     ")\n",
@@ -253,16 +244,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_single_dataset(grid_size, pixels_per_unit, include_params=True):\n",
-    "    bounding_pixel_centre_val_mm = (grid_size / 2 - 0.5) / pixels_per_unit   \n",
+    "def create_gaussian(x_pos, y_pos, sigma):\n",
+    "    variance = sigma**2\n",
+    "    norm = 1 / (2*np.pi*variance)\n",
+    "    def gaussian(x, y):\n",
+    "        return norm * np.exp(-((x - x_pos)**2 + (y - y_pos)**2)/(2*variance))\n",
     "\n",
-    "    field_centre = np.random.uniform(-0.2, 0.2, size=2)\n",
-    "    field_side_lengths = np.exp(np.random.uniform(np.log(0.15), np.log(1.5), size=2))\n",
-    "    field_penumbra = np.random.uniform(0.01, 0.05)\n",
+    "    return gaussian\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_single_dataset(grid_size, pixels_per_unit, include_params=True):\n",
+    "    bounding_pixel_centre_val = (grid_size / 2 - 0.5) / pixels_per_unit   \n",
+    "\n",
+    "    field_centre = np.random.uniform(-60, 60, size=2)\n",
+    "    field_side_lengths = np.exp(np.random.uniform(np.log(15), np.log(150), size=2))\n",
+    "    field_penumbra = np.random.uniform(1, 5)\n",
     "\n",
     "    field_rotation = np.random.uniform(-180, 180)\n",
     "\n",
     "    transform = interppoints.translate_and_rotate_transform(field_centre, field_rotation)\n",
+    "    \n",
+    "    field_corners_before_transform = [\n",
+    "        (-field_side_lengths[0]/2, -field_side_lengths[0]/2, field_side_lengths[0]/2, field_side_lengths[0]/2),\n",
+    "        (-field_side_lengths[1]/2, field_side_lengths[1]/2, -field_side_lengths[1]/2, field_side_lengths[1]/2),\n",
+    "    ]\n",
     "\n",
     "    bb_centre_before_transform = [\n",
     "        np.random.uniform(\n",
@@ -271,8 +290,9 @@
     "            -field_side_lengths[1]/2, field_side_lengths[1]/2)\n",
     "    ]\n",
     "    bb_centre = interppoints.apply_transform(*bb_centre_before_transform, transform)\n",
+    "    field_corners = np.array(interppoints.apply_transform(*field_corners_before_transform, transform))\n",
     "\n",
-    "    bb_diameter = tf.random.uniform((), 0.005, 0.1).numpy()\n",
+    "    bb_diameter = tf.random.uniform((), 0.5, 10).numpy()\n",
     "    bb_max_attenuation = tf.random.uniform((), 0.1, 0.5).numpy()\n",
     "\n",
     "\n",
@@ -285,8 +305,8 @@
     "    )\n",
     "\n",
     "    x = np.linspace(\n",
-    "        -bounding_pixel_centre_val_mm,\n",
-    "        bounding_pixel_centre_val_mm,\n",
+    "        -bounding_pixel_centre_val,\n",
+    "        bounding_pixel_centre_val,\n",
     "        grid_size\n",
     "    )\n",
     "    xx, yy = np.meshgrid(x, x)\n",
@@ -305,10 +325,16 @@
     "    \n",
     "    model_input = tf.stack([xx, yy, img], axis=-1)\n",
     "    \n",
-    "    xx_out = bb_centre[0] - xx\n",
-    "    yy_out = bb_centre[1] - yy\n",
+    "    sigma = 1.5 / PIXELS_PER_UNIT\n",
+    "    bb_heatmap = tf.convert_to_tensor(create_gaussian(*bb_centre, sigma)(xx, yy), dtype=tf.float32)\n",
     "    \n",
-    "    model_output = tf.stack([xx_out, yy_out], axis=-1)\n",
+    "    field_corner_heatmap = np.zeros_like(bb_heatmap)\n",
+    "    for field_corner in field_corners.T:\n",
+    "        field_corner_heatmap += create_gaussian(*field_corner, sigma)(xx, yy)\n",
+    "        \n",
+    "    field_corner_heatmap = tf.convert_to_tensor(field_corner_heatmap, dtype=tf.float32)\n",
+    "    \n",
+    "    model_output = tf.stack([bb_heatmap, field_corner_heatmap], axis=-1)\n",
     "    \n",
     "    if include_params:\n",
     "        return model_input, model_output, parameters\n",
@@ -324,10 +350,21 @@
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2], 100)\n",
-    "plt.contour(model_input[:,:,0], model_input[:,:,1], model_output[:,:,0], levels=[0])\n",
-    "plt.contour(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1], levels=[0])\n",
+    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_output[:,:,0], levels=np.linspace(0.5,1.2,100), cmap='magma')\n",
+    "plt.axis('equal')\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2], 100)\n",
+    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1], levels=np.linspace(0.5,1.2,100), cmap='magma')\n",
     "plt.axis('equal')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
